--- a/index.html
+++ b/index.html
@@ -13,7 +13,50 @@
     <title>KoniPAS</title>
 </head>
 <body>
-    <header>
+
+     <!--Header-->
+
+    <header class="header">
+        <img class="logo" src="icons/logo.svg" alt="logo">
+
+        <!--Mobile-nav-->
+
+        <div class="mobile-nav">
+            <input class="mobile-nav__checkbox" type="checkbox" id="mobile-nav-toggle">
+            <label class="mobile-nav__button" for="mobile-nav-toggle"><img class="mobile-nav__icon" src="icons/icon-nav.svg" alt="navigace"></label>
+
+            <a class="mobile-nav__icon-close" href="index.html"><img src="icons/icon-close.svg" width="35px" alt="ikona zavřít"></a>
+
+            <nav class="mobile-nav__nav">
+                <ul class="mobile-nav__list">
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Domů</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">O nás</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Podpora</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Co děláme</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Komunitní dění</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">PAS</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Vize</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Partneři</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <!--Navigation-->
+
+        <nav class="navigation">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a class="navigation__link" href="#">Domů</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#">O nás</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#">Podpora</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#">Co děláme</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#">Komunitní dění</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#">PAS</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#">Vize</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#">Partneři</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#">Kontakt</a></li>
+            </ul>
+        </nav>
 
     </header>
 
