--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
 
     <main>
 
+        <!--Hero-->
+
+        <section class="section-hero">
+            <div class="section-hero__content u-center-text">
+                <h1 class="heading-primary">Hlavní titulek</h1>
+                <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
+                <p><a class="btn" href="#">O nás</a></p>
+            </div>
+            <div class="section-hero__images">
+                <div class="section-hero__img-wrapp"></div>
+            </div>
+        </section>
+
+
     </main>
 
     <footer>
