--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                 <p><a class="btn" href="#">O nás</a></p>
             </div>
             <div class="section-hero__images">
-                <div class="section-hero__img-wrapp"></div>
+                <div class="section-hero__img-wrapp section-hero__img-wrapp--1"></div>
+                <div class="section-hero__img-wrapp section-hero__img-wrapp--2"></div>
+                <div class="section-hero__img-wrapp section-hero__img-wrapp--3"></div>
             </div>
         </section>
 
