--- a/index.html
+++ b/index.html
@@ -81,11 +81,52 @@
         <!--Co děláme-->
         
         <div class="u-background u-background--color-primary-500">
-            <section class="section-actions grid u-wrapper u-padding-top-medium u-padding-bottom-large">
-                <article class="card-action">
-                    <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-1.jpg" alt=""></a>
-                    <p><a class="card-action__link" href="#">Pomáháme rodinám</a></p>
-                </article>
+            <section class="section-actions u-wrapper u-padding-top-small u-padding-bottom-medium">
+                <h2 class="heading-secondary section-actions__title">Co děláme</h2>
+                <div class="grid">
+
+                    <!-- 1-3 -->
+                    <article class="card-action">
+                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-1.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Pomáháme rodinám</a></p>
+                    </article>
+                    <article class="card-action">
+                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-2.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Vzděláváme rodiče</a></p>
+                    </article>
+                    <article class="card-action">
+                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-3.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Sdílíme vizi</a></p>
+                    </article>
+
+                    <!-- 3-6 -->
+                    <article class="card-action">
+                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-4.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Tvoříme komunitum</a></p>
+                    </article>
+                    <article class="card-action">
+                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-5.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Podporujeme děti</a></p>
+                    </article>
+                    <article class="card-action">
+                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-6.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Pořádáme akce</a></p>
+                    </article>
+
+                    <!-- 6-9 -->
+                    <article class="card-action">
+                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-7.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Služby & terapie</a></p>
+                    </article>
+                    <article class="card-action">
+                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-8.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Půjčujeme pomůcky</a></p>
+                    </article>
+                    <article class="card-action">
+                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-9.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Odborné stáže</a></p>
+                    </article>
+                </div>
             </section>
         </div>
 
