Add Section For

--- a/index.html
+++ b/index.html
@@ -130,6 +130,30 @@
             </section>
         </div>
 
+        <!--Pro koho-->
+
+        <div class="u-background u-background--color-primary-200">
+            <section class="section-for u-wrapper u-padding-top-small u-padding-bottom-medium">
+                <h2 class="heading-secondary section-for__title">Pro koho</h2>
+            </section>
+        </div>
+
+        <!--Odborníci, školy, školky-->
+
+        <div class="u-background u-background--color-primary-700">
+            <section class="section-institutions u-wrapper u-padding-top-small u-padding-bottom-medium">
+                <h2 class="heading-secondary section-institutions__title">Odborníci, školy, školky</h2>
+            </section>
+        </div>
+
+        <!--Bez Vás to nedokážeme-->
+
+        <div class="u-background u-background--color-primary-200">
+            <section class="section-gift u-wrapper u-padding-top-small u-padding-bottom-medium">
+                <h2 class="heading-secondary section-gift__title">Bez Vás to nedokážeme</h2>
+            </section>
+        </div>
+
 
 
 
@@ -141,3 +165,15 @@
     
 </body>
 </html>
+
+
+
+        <!--Pro koho
+
+        <div class="u-background u-background--color-primary-200">
+            <section class="section-for u-wrapper u-padding-top-small u-padding-bottom-medium">
+                <h2 class="heading-secondary section-for__title">Pro koho</h2>
+            </section>
+        </div>
+
+        -->
