Add Section Institutions

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="u-background u-background--color-primary-500">
             <section class="section-actions u-wrapper u-padding-top-small u-padding-bottom-medium">
                 <h2 class="heading-secondary section-actions__title">Co děláme</h2>
-                <div class="grid">
+                <div class="grid u-padding-top-small u-padding-bottom-small">
 
                     <!-- 1-3 -->
                     <article class="card-action">
@@ -134,15 +134,27 @@
 
         <div class="u-background u-background--color-primary-200">
             <section class="section-for u-wrapper u-padding-top-small u-padding-bottom-medium">
-                <h2 class="heading-secondary section-for__title">Pro koho</h2>
+                <h2 class="heading-secondary section-for__title u-padding-bottom-small">Pro koho</h2>
+                <div class="columns">
+                    <h3 class="heading-tertiary u-margin-top-0">Děti se speciálními potřebami</h3>
+                    <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra</p>
+                    <h3 class="heading-tertiary u-margin-top-0">Co je PAS</h3>
+                    <p class="paragraph">Lorem ipsum ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis.</p>
+                </div>
+                <p class="u-center-text u-padding-top-small"><a class="btn" href="#">Zjistit více</a></p>
             </section>
         </div>
 
         <!--Odborníci, školy, školky-->
 
         <div class="u-background u-background--color-primary-700">
-            <section class="section-institutions u-wrapper u-padding-top-small u-padding-bottom-medium">
-                <h2 class="heading-secondary section-institutions__title">Odborníci, školy, školky</h2>
+            <section class="section-institutions u-wrapper u-padding-top-small u-padding-bottom-small">
+                <div aria-colspan="section-institutions__content" class="u-padding-bottom-small">
+                    <h2 class="heading-secondary section-institutions__title">Odborníci, školy, školky</h2>
+                    <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                    <p class="u-center-text u-padding-top-small u-padding-bottom-small"><a class="btn btn--light" href="#">Odkazy zde</a></p>
+                </div>
+                <figcaption class="section-institutions__fig u-responzive-img__wrapp"><img class="u-responzive-img__img" src="/images/praceholder-institutions.jpg" alt="dítě s PAS"></figcaption>
             </section>
         </div>
 
@@ -151,6 +163,7 @@
         <div class="u-background u-background--color-primary-200">
             <section class="section-gift u-wrapper u-padding-top-small u-padding-bottom-medium">
                 <h2 class="heading-secondary section-gift__title">Bez Vás to nedokážeme</h2>
+                <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exe.</p>
             </section>
         </div>
 
