Add Section Gift and Submenu

--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@
             <nav class="navigation">
                 <ul class="navigation__list">
                     <li class="navigation__item"><a class="navigation__link" href="#">Domů</a></li>
-                    <li class="navigation__item"><a class="navigation__link" href="#">O nás</a></li>
+                    <li class="navigation__item has-submenu"><a class="navigation__link" href="#">O nás</a>
+                        <ul class="navigation__submenu">
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                        </ul>
+                    </li>
                     <li class="navigation__item"><a class="navigation__link" href="#">Podpora</a></li>
                     <li class="navigation__item"><a class="navigation__link" href="#">Co děláme</a></li>
                     <li class="navigation__item"><a class="navigation__link" href="#">Komunitní dění</a></li>
@@ -154,16 +162,18 @@
                     <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
                     <p class="u-center-text u-padding-top-small u-padding-bottom-small"><a class="btn btn--light" href="#">Odkazy zde</a></p>
                 </div>
-                <figcaption class="section-institutions__fig u-responzive-img__wrapp"><img class="u-responzive-img__img" src="/images/praceholder-institutions.jpg" alt="dítě s PAS"></figcaption>
+                <figcaption class="section-institutions__fig u-responzive-img__wrapp"><img class="u-responzive-img__img section-institutions__img" src="/images/praceholder-institutions.jpg" alt="dítě s PAS"></figcaption>
             </section>
         </div>
 
         <!--Bez Vás to nedokážeme-->
 
         <div class="u-background u-background--color-primary-200">
-            <section class="section-gift u-wrapper u-padding-top-small u-padding-bottom-medium">
-                <h2 class="heading-secondary section-gift__title">Bez Vás to nedokážeme</h2>
-                <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exe.</p>
+            <section class="section-gift u-wrapper u-padding-bottom-medium">
+                <div class="section-gift__content">
+                    <h2 class="heading-secondary section-gift__title">Bez Vás to nedokážeme</h2>
+                    <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc.</p>
+                </div>
             </section>
         </div>
 
@@ -176,6 +186,7 @@
 
     </footer>
     
+    <script type="module" src="script.js"></script>
 </body>
 </html>
 
