--- a/index.html
+++ b/index.html
@@ -174,6 +174,18 @@
                     <h2 class="heading-secondary section-gift__title">Bez Vás to nedokážeme</h2>
                     <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc.</p>
                 </div>
+                <div class="section-gift__qr">
+                    <div class="section-gift__qr-col-1-of-2">
+                        <h3 class="section-gift__qr-title">Náš transparentní účet:</h3>
+                        <p class="section-gift__num-account u-padding-bottom-small">1234 5678 9632 / 3214</p>
+                        <figcaption class="section-gift__fig"><img class="section-gift__img" src="/images/QR-Code.svg" alt="QR kód"></figcaption>
+                    </div>
+                    <div class="section-gift__qr-col-2-of-2">
+                        <p class="paragraph">Ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exe.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                        <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exe.</p>
+                        <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Více o možnostech podpory</a></p>
+                    </div>
+                </div>
             </section>
         </div>
 
