--- a/index.html
+++ b/index.html
@@ -50,16 +50,36 @@
                     <li class="navigation__item"><a class="navigation__link" href="#">Domů</a></li>
                     <li class="navigation__item has-submenu"><a class="navigation__link" href="#">O nás</a>
                         <ul class="navigation__submenu">
-                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
-                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
-                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
-                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
-                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Co se povedlo</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Napsali o nás</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Řekli o nás</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Fotogalerie</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Stanovy</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Výroční zprávy</a></li>
                         </ul>
                     </li>
                     <li class="navigation__item"><a class="navigation__link" href="#">Podpora</a></li>
-                    <li class="navigation__item"><a class="navigation__link" href="#">Co děláme</a></li>
-                    <li class="navigation__item"><a class="navigation__link" href="#">Komunitní dění</a></li>
+                    <li class="navigation__item has-submenu"><a class="navigation__link" href="#">Co děláme</a>
+                        <ul class="navigation__submenu">
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Pomáháme rodinám</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Vzděláváme rodiče</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Sdílíme vizi</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Tvoříme komunitu</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Podporujeme děti</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Pořádáme akce</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Služby & terapie</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Půjčujeme pomůcky</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Odborné stáže</a></li>
+                        </ul>
+                    </li>
+                    <li class="navigation__item has-submenu"><a class="navigation__link" href="#">Komunitní dění</a>
+                        <ul class="navigation__submenu">
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Aktuality a pozvánky</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Setkání podpůrné skupiny</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Registrace na přednášky</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Fotky z akcí</a></li>
+                        </ul>
+                    </li>
                     <li class="navigation__item"><a class="navigation__link" href="#">PAS</a></li>
                     <li class="navigation__item"><a class="navigation__link" href="#">Vize</a></li>
                     <li class="navigation__item"><a class="navigation__link" href="#">Partneři</a></li>
@@ -194,8 +214,20 @@
 
     </main>
 
-    <footer>
-
+    <footer class="footer u-background--color-primary-600">
+        <div class="footer__conteiner u-wrapper u-padding-top-small u-padding-bottom-medium">
+            <figcaption><img src="/icons/logo.svg" width="200px" alt="logo KoniPAS"></figcaption>
+            <p class="footer__menu-item"><a class="footer__link" href="#">O nás</a>
+                <ul class="footer__submenu">
+                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Co se povedlo</a></li>
+                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Napsali o nás</a></li>
+                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Řekli o nás</a></li>
+                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Fotogalerie</a></li>
+                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Stanovy</a></li>
+                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Výroční zprávy</a></li>
+                </ul>
+            </p>
+        </div>
     </footer>
     
     <script type="module" src="script.js"></script>
@@ -211,5 +243,30 @@
                 <h2 class="heading-secondary section-for__title">Pro koho</h2>
             </section>
         </div>
+
+
+
+
+        <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a class="navigation__link" href="#">Domů</a></li>
+                    <li class="navigation__item has-submenu"><a class="navigation__link" href="#">O nás</a>
+                        <ul class="navigation__submenu">
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">sub-položka-menu</a></li>
+                        </ul>
+                    </li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">Podpora</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">Co děláme</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">Komunitní dění</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">PAS</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">Vize</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">Partneři</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">Kontakt</a></li>
+                </ul>
+            </nav>
 
         -->
