Add Footer and Copy

--- a/index.html
+++ b/index.html
@@ -215,20 +215,60 @@
     </main>
 
     <footer class="footer u-background--color-primary-600">
-        <div class="footer__conteiner u-wrapper u-padding-top-small u-padding-bottom-medium">
-            <figcaption><img src="/icons/logo.svg" width="200px" alt="logo KoniPAS"></figcaption>
-            <p class="footer__menu-item"><a class="footer__link" href="#">O nás</a>
-                <ul class="footer__submenu">
-                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Co se povedlo</a></li>
-                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Napsali o nás</a></li>
-                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Řekli o nás</a></li>
-                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Fotogalerie</a></li>
-                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Stanovy</a></li>
-                    <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Výroční zprávy</a></li>
-                </ul>
-            </p>
+        <div>
+            <div class="footer__conteiner u-padding-top-medium u-padding-bottom-small">
+                <figcaption class="footer__fig"><img src="/icons/logo.svg" width="200px" alt="logo KoniPAS"></figcaption>
+                <div class="footer__menu-item"><a class="footer__link" href="#">O nás</a>
+                    <ul class="footer__submenu">
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Co se povedlo</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Napsali o nás</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Řekli o nás</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Fotogalerie</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Stanovy</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Výroční zprávy</a></li>
+                    </ul>
+                </div>
+                <div class="footer__menu-item"><a class="footer__link" href="#">Co děláme</a>
+                    <ul class="footer__submenu">
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Pomáháme rodinám</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Vzděláváme rodiče</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Řekli o nás</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Sdílíme vizi</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Tvoříme komunitu</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Podporujeme děti</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Služby & terapie</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Půjčujeme pomůcky</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Odborné stáže</a></li>
+                    </ul>
+                </div>
+                <div class="footer__menu-item"><a class="footer__link" href="#">Komunitní dění</a>
+                    <ul class="footer__submenu">
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Aktuality a pozvánky</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Setkání podpůrné skupiny</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Registrace na přednášky</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Foto z akcí</a></li>
+                    </ul>
+                </div>
+                <div class="footer__menu-item">
+                    <ul class="footer__submenu footer__submenu--last">
+                        <li class="footer__menu-item"><a class="footer__link" href="#">Podpora</a></li>
+                        <li class="footer__menu-item"><a class="footer__link" href="#">Vize</a></li>
+                        <li class="footer__menu-item"><a class="footer__link" href="#">PAS</a></li>
+                        <li class="footer__menu-item"><a class="footer__link" href="#">Partneři</a></li>
+                        <li class="footer__menu-item"><a class="footer__link" href="#">Kontakt</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
+
+    <div class="u-background u-background--color-primary-700">
+        <section class="section-copy u-wrapper u-padding-top-small u-padding-bottom-small">
+            <div>
+                <p class="u-wrapper">© 2023 KoniPAS</p>
+            </div>
+        </section>
+    </div>
     
     <script type="module" src="script.js"></script>
 </body>
