--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <section class="section-institutions u-wrapper u-padding-top-small u-padding-bottom-small">
                 <div aria-colspan="section-institutions__content" class="u-padding-bottom-small">
                     <h2 class="heading-secondary section-institutions__title">Odborníci, školy, školky</h2>
-                    <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                    <p class="paragraph paragraph--white">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
                     <p class="u-center-text u-padding-top-small u-padding-bottom-small"><a class="btn btn--light" href="#">Odkazy zde</a></p>
                 </div>
                 <figcaption class="section-institutions__fig u-responzive-img__wrapp"><img class="u-responzive-img__img section-institutions__img" src="/images/praceholder-institutions.jpg" alt="dítě s PAS"></figcaption>
@@ -209,10 +209,10 @@
             </section>
         </div>
 
-
-
-
     </main>
+
+
+    <!-- Footer -->
 
     <footer class="footer u-background--color-primary-600">
         <div>
@@ -265,7 +265,7 @@
     <div class="u-background u-background--color-primary-700">
         <section class="section-copy u-wrapper u-padding-top-small u-padding-bottom-small">
             <div>
-                <p class="u-wrapper">© 2023 KoniPAS</p>
+                <p class="section-copy__p u-wrapper">© 2023 KoniPAS</p>
             </div>
         </section>
     </div>
