--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Tvoříme komunitu</a></li>
                             <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Podporujeme děti</a></li>
                             <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Pořádáme akce</a></li>
-                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Služby & terapie</a></li>
+                            <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Služby &amp; terapie</a></li>
                             <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Půjčujeme pomůcky</a></li>
                             <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Odborné stáže</a></li>
                         </ul>
@@ -144,7 +144,7 @@
                     <!-- 6-9 -->
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-7.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="#">Služby & terapie</a></p>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Služby &amp; terapie</a></p>
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-8.jpg" alt=""></a>
@@ -236,7 +236,7 @@
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Sdílíme vizi</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Tvoříme komunitu</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Podporujeme děti</a></li>
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Služby & terapie</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Služby [&] terapie</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Půjčujeme pomůcky</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Odborné stáže</a></li>
                     </ul>
@@ -265,7 +265,7 @@
     <div class="u-background u-background--color-primary-700">
         <section class="section-copy u-wrapper u-padding-top-small u-padding-bottom-small">
             <div>
-                <p class="section-copy__p u-wrapper">© 2023 KoniPAS</p>
+                <p class="section-copy__p u-wrapper">&copy; 2023 KoniPAS</p>
             </div>
         </section>
     </div>
