--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title: KoniPAS
                     <!-- 3-6 -->
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-4.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="#">Tvoříme komunitum</a></p>
+                        <p class="card-action__p"><a class="card-action__link" href="#">Tvoříme komunitu</a></p>
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-5.jpg" alt=""></a>
