Add Section O nas

--- a/o-nas.html
+++ b/o-nas.html
@@ -4,12 +4,34 @@ title: O nás
 ---
 
 <div class="u-background u-background--color-primary-200">
-    <section class="section-for u-wrapper u-padding-top-small u-padding-bottom-medium">
+    <section class="section-o-nas u-wrapper u-padding-bottom-medium">
         <h2 class="heading-secondary section-for__title">O nás</h2>
+        <div class="section-o-nas__flex">
+            <figcaption class="section-o-nas__fig"><img class="section-o-nas__img" src="/images/IMG_20230517_182905.jpg" width="460px" alt="zakladatelka KoniPAS"></figcaption>
+            <div class="section-o-nas__content">
+                <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra.</p>
+                <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Naše vize</a></p>
+            </div>
+        </div>
+    </section>
+</div>
+
+<div class="u-background u-background--color-primary-500">
+    <section class="section-o-nas-2 u-wrapper u-padding-top-small u-padding-bottom-medium">
+        <div class="section-o-nas-2__flex">
+            <div class="section-o-nas-2__empty"></div>
+            <div class="section-o-nas-2__first-content">
+                <h2 class="heading-secondary section-for__title">Nadpis</h2>
+                <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris.</p>
+            </div>
+        </div>
         <div>
-            <img src="/images/IMG_20230517_182905.jpg" width="460px" alt="zakladatelka KoniPAS">
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra.</p>
-            <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Naše vize</a></p>
+            <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra </p>
+            <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
+        </div>
+        <div>
+            <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
+            <figcaption><img src="/images/" alt=""></figcaption>
         </div>
     </section>
 </div>
