Add Section Medallions

--- a/o-nas.html
+++ b/o-nas.html
@@ -4,10 +4,10 @@ title: O nás
 ---
 
 <div class="u-background u-background--color-primary-200">
-    <section class="section-o-nas u-wrapper u-padding-bottom-medium">
+    <section class="section-o-nas u-wrapper">
         <h2 class="heading-secondary section-for__title">O nás</h2>
         <div class="section-o-nas__flex">
-            <figcaption class="section-o-nas__fig"><img class="section-o-nas__img" src="/images/IMG_20230517_182905.jpg" width="460px" alt="zakladatelka KoniPAS"></figcaption>
+            <figcaption class="section-o-nas__fig u-padding-top-small"><img class="section-o-nas__img" src="/images/IMG_20230517_182905.jpg" width="460px" alt="zakladatelka KoniPAS"></figcaption>
             <div class="section-o-nas__content">
                 <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra.</p>
                 <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Naše vize</a></p>
@@ -17,21 +17,34 @@ title: O nás
 </div>
 
 <div class="u-background u-background--color-primary-500">
-    <section class="section-o-nas-2 u-wrapper u-padding-top-small u-padding-bottom-medium">
+    <section class="section-o-nas-2 u-wrapper u-padding-top-small">
         <div class="section-o-nas-2__flex">
             <div class="section-o-nas-2__empty"></div>
             <div class="section-o-nas-2__first-content">
                 <h2 class="heading-secondary section-for__title">Nadpis</h2>
-                <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris.</p>
+                <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud.</p>
             </div>
         </div>
-        <div>
+        <div class="section-o-nas-2__second-content">
             <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra </p>
             <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
         </div>
-        <div>
-            <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
-            <figcaption><img src="/images/" alt=""></figcaption>
+        <div class="section-o-nas-2__third-content">
+            <p class="paragraph">Labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
+            <figcaption class="section-o-nas-2__fig u-padding-top-medium"><img class="section-o-nas-2__img" src="/images/IMG_20230517_170002.jpg" width="500px" alt=""></figcaption>
         </div>
     </section>
+
+    <div class="u-background u-background--color-primary-200">
+        <section class="section-medallions u-wrapper">
+            <h2 class="heading-secondary section-medallions__title">Medailonky</h2>
+            <div>
+                <div>
+                    <figcaption><img src="" alt=""></figcaption>
+                    <h4>Žaneta Mihališin</h4>
+                    <p></p>
+                </div>
+            </div>
+        </section>
+    </div>
 </div>
