--- a/o-nas.html
+++ b/o-nas.html
@@ -7,7 +7,7 @@ title: O nás
     <section class="section-o-nas u-wrapper">
         <h2 class="heading-secondary section-for__title">O nás</h2>
         <div class="section-o-nas__flex">
-            <figcaption class="section-o-nas__fig u-padding-top-small"><img class="section-o-nas__img" src="/images/IMG_20230517_182905.jpg" width="460px" alt="zakladatelka KoniPAS"></figcaption>
+            <figcaption class="section-o-nas__fig u-padding-top-small"><img class="section-o-nas__img" src="/images/zaneta-mihalisin.jpg" width="460px" alt="zakladatelka KoniPAS"></figcaption>
             <div class="section-o-nas__content">
                 <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra.</p>
                 <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Naše vize</a></p>
@@ -30,8 +30,8 @@ title: O nás
             <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
         </div>
         <div class="section-o-nas-2__third-content">
-            <p class="paragraph">Labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
-            <figcaption class="section-o-nas-2__fig u-padding-top-medium"><img class="section-o-nas-2__img" src="/images/IMG_20230517_170002.jpg" width="500px" alt=""></figcaption>
+            <p class="paragraph section-o-nas-2__part-of-flex">Labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
+            <figcaption class="section-o-nas-2__fig u-padding-top-medium"><img class="section-o-nas-2__img" src="/images/IMG_20230517_170002.jpg" width="500" alt=""></figcaption>
         </div>
     </section>
 
